updated java to v21, added unit testing